--- a/index.html
+++ b/index.html
@@ -16,9 +16,17 @@
 </head>
 <body>
 <div id="fb-root"></div>
-	<script src="pathfind.js"></script>
-	<script src="c2runtime.js"></script>
-	<script src="start.js"></script>
-	<script src="register-sw.js"></script>
+
+	<noscript>
+		<div id="notSupportedWrap">
+			<h2 id="notSupportedTitle">This content requires JavaScript</h2>
+			<p class="notSupportedMessage">JavaScript appears to be disabled. Please enable it to view this content.</p>
+			<p class="notSupportedMessage">This content was built using Construct. <a href="https://www.construct.net/en">Create games</a></p>
+		</div>
+	</noscript>
+	<script src="scripts/supportCheck.js"></script>
+	<script src="scripts/offlineClient.js"></script>
+	<script src="scripts/main.js"></script>
+	<script src="scripts/register-sw.js"></script>
 </body>
 </html>
