--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<div id="notSupportedWrap">
 			<h2 id="notSupportedTitle">This content requires JavaScript</h2>
 			<p class="notSupportedMessage">JavaScript appears to be disabled. Please enable it to view this content.</p>
-			<p class="notSupportedMessage">This content was developed with Construct. <a href="https://www.construct.net/en">Make your own games</a></p>
+			<p class="notSupportedMessage">This game was made using Construct, a <a href="https://www.construct.net/en">free game maker</a>.</p>
 		</div>
 	</noscript>
 	<script src="scripts/supportCheck.js"></script>
